erDiagram
    USERS ||--o{ USER_ROLES : has
    ROLES ||--o{ USER_ROLES : assigned
    ROLES ||--o{ ROLE_PERMISSIONS : grants
    PERMISSIONS ||--o{ ROLE_PERMISSIONS : contains
    USERS ||--o{ AUTH_IDENTITIES : authenticates
    USERS ||--o{ REFRESH_TOKENS : owns
    USERS ||--o{ USER_ADDRESSES : has
    USERS ||--o{ BUSINESSES : owns
    BUSINESSES ||--o{ BUSINESS_LOCATIONS : has
    BUSINESSES ||--o{ BUSINESS_DOCUMENTS : submits
    BUSINESS_CATEGORIES ||--o{ BUSINESS_CATEGORY_MAP : classifies
    BUSINESSES ||--o{ BUSINESS_CATEGORY_MAP : belongs_to
    PRODUCT_CATEGORIES ||--o{ PRODUCTS : groups
    BUSINESSES ||--o{ PRODUCTS : sells
    PRODUCTS ||--o{ PRODUCT_IMAGES : has
    PRODUCTS ||--o{ PRODUCT_VARIANTS : has
    PRODUCT_VARIANTS ||--o{ INVENTORY : stocked_as
    BUSINESS_LOCATIONS ||--o{ INVENTORY : stores
    SERVICE_CATEGORIES ||--o{ SERVICES : groups
    BUSINESSES ||--o{ SERVICES : provides
    SERVICES ||--o{ SERVICE_AVAILABILITY : available_by
    SERVICES ||--o{ BOOKING_SLOTS : opens
    BOOKING_SLOTS ||--o{ BOOKINGS : reserves
    USERS ||--o{ BOOKINGS : books
    USERS ||--o{ CARTS : owns
    CARTS ||--o{ CART_ITEMS : contains
    USERS ||--o{ ORDERS : places
    BUSINESSES ||--o{ ORDERS : fulfills
    ORDERS ||--o{ ORDER_ITEMS : contains
    ORDERS ||--o{ ORDER_STATUS_HISTORY : tracks
    ORDERS ||--o{ PAYMENTS : paid_by
    BOOKINGS ||--o{ PAYMENTS : paid_by
    COUPONS ||--o{ COUPON_REDEMPTIONS : redeemed
    USERS ||--o{ REVIEWS : writes
    USERS ||--o{ RATINGS : scores
    USERS ||--o{ FAVORITES : saves
    USERS ||--o{ NOTIFICATIONS : receives
    USERS ||--o| DELIVERY_PARTNERS : becomes
    DELIVERY_PARTNERS ||--o{ DELIVERY_ASSIGNMENTS : accepts
    DELIVERY_ASSIGNMENTS ||--o{ DELIVERY_TRACKING : emits
    USERS ||--o| WALLETS : owns
    WALLETS ||--o{ WALLET_TRANSACTIONS : records
    BUSINESSES ||--o{ OFFERS : publishes
    USERS ||--o{ AUDIT_LOGS : acts
